# nes_emulator

./: .gitignore  CMakeLists.txt  README.org
demos/: CMakeLists.txt  base_app.cc  base_app.h  cpu_debugger.cc  cpu_debugger.h  cpu_simulator.cc  cpu_simulator.h
doc/: dump_test.txt
olc_origin/: Bus.cpp  Bus.h  CMakeLists.txt  olc2C02.cpp  olcNes_PPU_Backgrounds.cpp
script/: CMakeLists.txt  dump.cc
src/: CMakeLists.txt  bus.cc  bus.h  cartridge.cc  cartridge.h  cpu.cc  cpu.h  cpu_simulator.cc  cpu_simulator.h  empty_cartridge.cc  empty_cartridge.h  main.cc  mapper.cc  mapper.h  mapper_000.cc  mapper_000.h  olcPixelGameEngine.h  ppu.cc  ppu.h  ppu_gui.cc  ppu_gui.h  util.cc  util.h
src/debug_ui/: ui_palette.cc  ui_palette.h
src/include/th_nes/: bus.h  cartridge.h  cpu.h
src/ppu/: bridge.cc  bridge.h  name_table.cc  name_table.h  name_tables.cc  name_tables.h  palette.cc  palette.h  pattern.cc  pattern.h  ppu.cc  ppu.h  ppu_device.cc  ppu_device.h
src/ppu/ui/: ui_name_table.cc  ui_name_table.h  ui_ppu.cc  ui_ppu.h  uippu.cc  uippu.h
test/: CMakeLists.txt  test_cpu.cc
